// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots VButton/desktop disabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    width="100%"
  >
    <thead>
      <tr>
        <th />
         
        <th>
          Primary
        </th>
         
        <th>
          Secondary
        </th>
         
        <th>
          Tertiary
        </th>
         
        <th>
          Quaternary
        </th>
         
        <th>
          Ghost
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop enabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    width="100%"
  >
    <thead>
      <tr>
        <th />
         
        <th>
          Primary
        </th>
         
        <th>
          Secondary
        </th>
         
        <th>
          Tertiary
        </th>
         
        <th>
          Quaternary
        </th>
         
        <th>
          Ghost
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop icon 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    width="100%"
  >
    <thead>
      <tr>
        <th />
         
        <th>
          Primary
        </th>
         
        <th>
          Secondary
        </th>
         
        <th>
          Tertiary
        </th>
         
        <th>
          Quaternary
        </th>
         
        <th>
          Ghost
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="icon-atom v-button-icon icon-after theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-action"
                  y="0"
                />
              </svg>
            </i>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop social 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    width="100%"
  >
    <thead>
      <tr>
        <th />
         
        <th>
          Google
        </th>
         
        <th>
          GitHub
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-social size-normal"
          >
            <i
              class="icon-atom v-button-icon icon-before theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                style="margin-right: 5px;"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-google"
                  y="0"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               Google
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-social size-normal"
          >
            <i
              class="icon-atom v-button-icon icon-before theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                style="margin-right: 5px;"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-github"
                  y="0"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               GitHub
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-social size-big"
          >
            <i
              class="icon-atom v-button-icon icon-before theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                style="margin-right: 5px;"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-google"
                  y="0"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               Google
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-social size-big"
          >
            <i
              class="icon-atom v-button-icon icon-before theme-default"
            >
              <svg
                class="svg-atom theme-default"
                height="100%"
                style="margin-right: 5px;"
                width="100%"
              >
                <use
                  x="0"
                  xlink:href="#endpass-ui-icon-github"
                  y="0"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               GitHub
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop state 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    width="100%"
  >
    <thead>
      <tr>
        <th />
         
        <th>
          Success
        </th>
         
        <th>
          Error
        </th>
         
        <th>
          Quaternary Error
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-success size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-error size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary-error size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-success size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-error size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary-error size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VCheckbox/desktop array 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      name="Name"
      type="checkbox"
      value="Crypto!"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          with Crypto!
        
    </span>
  </label>
   
  <br />
  
        persons: Bob, Alice
      
</div>
`;

exports[`Storyshots VCheckbox/desktop default state 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      name="Name"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: false
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop default state false 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: false
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop default state true 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default is-checked"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: true
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop disabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default is-disabled"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      disabled="disabled"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          disabled
        
    </span>
  </label>
   
  <br />
   
  <label
    class="v-checkbox theme-default is-checked is-disabled"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      disabled="disabled"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          disabled
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop error 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default is-error"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control is-danger"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          is-error
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop true/false attr 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="icon-atom v-checkbox-frame theme-default"
    >
      [object Object]
    </i>
     
    <input
      class="v-checkbox-control"
      name="Name"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: no
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VContentSwitcher/desktop array objects 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <ul
    class="v-content-switcher theme-default"
  >
    <li
      class="v-content-switcher-item is-checked"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Left section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="0"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Middle section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="1"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Middle section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="2"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Right section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="3"
        />
      </label>
    </li>
  </ul>
   
  <div>
    state: 0
  </div>
</div>
`;

exports[`Storyshots VContentSwitcher/desktop simple array strings 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <ul
    class="v-content-switcher theme-default"
  >
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Left section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="Left section"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Middle section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="Middle section"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Right section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="Right section"
        />
      </label>
    </li>
  </ul>
   
  <div>
    state: 
  </div>
</div>
`;

exports[`Storyshots VDivider/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="v-divider theme-default"
    style="width: 378px;"
  >
    <hr
      class="v-divider-before"
    />
     
    <!---->
     
    <hr
      class="v-divider-after"
    />
  </div>
</div>
`;

exports[`Storyshots VDivider/desktop with text 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="v-divider theme-default"
    style="width: 378px;"
  >
    <hr
      class="v-divider-before"
    />
     
    <span
      class="v-divider-text"
    >
      or register in with
    </span>
     
    <hr
      class="v-divider-after"
    />
  </div>
</div>
`;

exports[`Storyshots VHeader/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <header
    class="v-header theme-default"
  >
    <button
      class="theme-default navigation-icon-button-atom"
    >
       
      <svg
        class="svg-atom theme-default"
        height="100%"
        width="100%"
      >
        <use
          x="0"
          xlink:href="#endpass-ui-icon-menu"
          y="0"
        />
      </svg>
    </button>
     
    <div
      class="v-nav-divider theme-default"
    />
     
    <a
      class="theme-default navigation-control-atom"
      role="button"
    >
      Item one
    </a>
     
    <a
      class="theme-default navigation-control-atom"
      role="button"
    >
      Item two
    </a>
     
    <a
      class="theme-default navigation-control-atom"
      role="button"
    >
      Item three
    </a>
     
    <section
      class="v-nav-sub-menu theme-default"
    >
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        
    Sub-menu
    
        <i
          class="v-nav-sub-menu-icon"
        >
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-chevron-down"
              y="0"
            />
          </svg>
        </i>
      </a>
       
      <section
        class="v-nav-sub-menu-content"
      >
        <a
          class="theme-default navigation-control-atom"
          role="button"
        >
          Item four
        </a>
         
        <a
          class="theme-default navigation-control-atom"
          role="button"
        >
          Item five
        </a>
         
        <a
          class="theme-default navigation-control-atom"
          role="button"
        >
          Item six
        </a>
      </section>
    </section>
  </header>
</div>
`;

exports[`Storyshots VInput/desktop disabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      disabled="disabled"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      disabled="disabled"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="input-atom theme-default"
      disabled="disabled"
    >
      <input
        class="input-atom-control"
        disabled="disabled"
        placeholder="Placeholder text"
      />
       
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots VInput/desktop enabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="input-atom theme-default"
    >
      <input
        class="input-atom-control"
        placeholder="Placeholder text"
      />
       
    </span>
     
    <!---->
  </div>
   
  <div
    class="field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="input-atom theme-default"
    >
      <input
        class="input-atom-control"
        placeholder="Placeholder text"
      />
       
    </span>
     
    <!---->
  </div>
  
        
      
</div>
`;

exports[`Storyshots VInput/desktop error 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="input-atom theme-default is-error"
    >
      <input
        class="input-atom-control"
        is-error="true"
        placeholder="Placeholder text"
      />
       
      <i
        class="icon-atom theme-default is-error"
        is-error="true"
      >
        
      !
    
      </i>
    </span>
     
    <div
      class="error-atom theme-default"
    >
      
  Error message here

    </div>
  </div>
</div>
`;

exports[`Storyshots VLabel/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <label
    class="label-atom theme-default"
  >
    
  Label text

  </label>
  
        Following content
      
</div>
`;

exports[`Storyshots VModal/VModalCard both 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-card theme-default"
      >
        <div
          class="v-modal-card-controls"
        >
          <button
            class="v-modal-card-back"
          >
            [object Object]
          </button>
           
          <button
            class="v-modal-card-close"
          >
            [object Object]
          </button>
        </div>
         
        <header
          class="v-modal-card-header"
        >
          <h3
            class="v-modal-card-title"
          >
            Modal title
          </h3>
        </header>
         
        <div
          class="v-modal-card-body"
        >
          
            Modal body
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalCard closable 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-card theme-default"
      >
        <div
          class="v-modal-card-controls"
        >
          <!---->
           
          <button
            class="v-modal-card-close"
          >
            [object Object]
          </button>
        </div>
         
        <header
          class="v-modal-card-header"
        >
          <h3
            class="v-modal-card-title"
          >
            Modal title
          </h3>
        </header>
         
        <div
          class="v-modal-card-body"
        >
          
            Modal body
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalCard default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-card theme-default"
      >
        <div
          class="v-modal-card-controls"
        >
          <!---->
           
          <!---->
        </div>
         
        <header
          class="v-modal-card-header"
        >
          <h3
            class="v-modal-card-title"
          >
            Modal title
          </h3>
        </header>
         
        <div
          class="v-modal-card-body"
        >
          
            Modal body
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalCard returnable 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-card theme-default"
      >
        <div
          class="v-modal-card-controls"
        >
          <button
            class="v-modal-card-back"
          >
            [object Object]
          </button>
           
          <!---->
        </div>
         
        <header
          class="v-modal-card-header"
        >
          <h3
            class="v-modal-card-title"
          >
            Modal title
          </h3>
        </header>
         
        <div
          class="v-modal-card-body"
        >
          
            Modal body
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalInfoCard both 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-info-card theme-default"
      >
        <aside
          class="v-modal-info-card-aside"
          style="background-image: url(img/info_bg.png);"
        >
          Some additional information about Endpass
        </aside>
         
        <div
          back-svg-href="img/icons.svg#icon-arrow-left"
          class="v-modal-card theme-default"
          close-svg-href="img/icons.svg#icon-close"
        >
          <div
            class="v-modal-card-controls"
          >
            <button
              class="v-modal-card-back"
            >
              [object Object]
            </button>
             
            <button
              class="v-modal-card-close"
            >
              [object Object]
            </button>
          </div>
           
          <header
            class="v-modal-card-header"
          >
            <h3
              class="v-modal-card-title"
            >
              Modal title
            </h3>
          </header>
           
          <div
            class="v-modal-card-body"
          >
              
            Modal body
          
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalInfoCard closable 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-info-card theme-default"
      >
        <aside
          class="v-modal-info-card-aside"
          style="background-image: url(img/info_bg.png);"
        >
          Some additional information about Endpass
        </aside>
         
        <div
          back-svg-href="img/icons.svg#icon-arrow-left"
          class="v-modal-card theme-default"
          close-svg-href="img/icons.svg#icon-close"
        >
          <div
            class="v-modal-card-controls"
          >
            <!---->
             
            <button
              class="v-modal-card-close"
            >
              [object Object]
            </button>
          </div>
           
          <header
            class="v-modal-card-header"
          >
            <h3
              class="v-modal-card-title"
            >
              Modal title
            </h3>
          </header>
           
          <div
            class="v-modal-card-body"
          >
              
            Modal body
          
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalInfoCard default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-info-card theme-default"
      >
        <aside
          class="v-modal-info-card-aside"
          style="background-image: url(img/info_bg.png);"
        >
          Some additional information about Endpass
        </aside>
         
        <div
          back-svg-href="img/icons.svg#icon-arrow-left"
          class="v-modal-card theme-default"
          close-svg-href="img/icons.svg#icon-close"
        >
          <div
            class="v-modal-card-controls"
          >
            <!---->
             
            <!---->
          </div>
           
          <header
            class="v-modal-card-header"
          >
            <h3
              class="v-modal-card-title"
            >
              Modal title
            </h3>
          </header>
           
          <div
            class="v-modal-card-body"
          >
              
            Modal body
          
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/VModalInfoCard returnable 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="mask-atom theme-default"
  >
    <div
      class="mask-atom-centered"
    >
      <div
        class="v-modal-info-card theme-default"
      >
        <aside
          class="v-modal-info-card-aside"
          style="background-image: url(img/info_bg.png);"
        >
          Some additional information about Endpass
        </aside>
         
        <div
          back-svg-href="img/icons.svg#icon-arrow-left"
          class="v-modal-card theme-default"
          close-svg-href="img/icons.svg#icon-close"
        >
          <div
            class="v-modal-card-controls"
          >
            <button
              class="v-modal-card-back"
            >
              [object Object]
            </button>
             
            <!---->
          </div>
           
          <header
            class="v-modal-card-header"
          >
            <h3
              class="v-modal-card-title"
            >
              Modal title
            </h3>
          </header>
           
          <div
            class="v-modal-card-body"
          >
              
            Modal body
          
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VNavControl/desktop active 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-control-atom is-active"
    href="#"
  >
    Active link
  </a>
</div>
`;

exports[`Storyshots VNavControl/desktop as button 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-control-atom"
    role="button"
  >
    Nav button
  </a>
</div>
`;

exports[`Storyshots VNavControl/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-control-atom"
    href="#"
  >
    Link
  </a>
</div>
`;

exports[`Storyshots VNavDivider/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <header
    class="v-header theme-default"
  >
    
          Some
          
    <div
      class="v-nav-divider theme-default"
    />
    
          divided
          
    <div
      class="v-nav-divider theme-default"
    />
    
          content
          
    <div
      class="v-nav-divider theme-default"
    />
    
          in
          
    <div
      class="v-nav-divider theme-default"
    />
    
          header
        
  </header>
</div>
`;

exports[`Storyshots VNavIconButton/desktop active 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <button
    class="theme-default navigation-icon-button-atom is-active"
  >
    <svg
      class="svg-atom theme-default"
      height="100%"
      width="100%"
    >
      <use
        x="0"
        xlink:href="#endpass-ui-icon-check"
        y="0"
      />
    </svg>
     
    <!---->
  </button>
</div>
`;

exports[`Storyshots VNavIconButton/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <button
    class="theme-default navigation-icon-button-atom"
  >
    <svg
      class="svg-atom theme-default"
      height="100%"
      width="100%"
    >
      <use
        x="0"
        xlink:href="#endpass-ui-icon-check"
        y="0"
      />
    </svg>
     
    <!---->
  </button>
</div>
`;

exports[`Storyshots VNavIconButton/desktop with icon as prop 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <button
    class="theme-default navigation-icon-button-atom"
  >
     
    <svg
      class="svg-atom theme-default"
      height="100%"
      width="100%"
    >
      <use
        x="0"
        xlink:href="#endpass-ui-icon-check"
        y="0"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots VNavSidebar/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    style="position: relative; height: 100vh;"
  >
    <header
      class="v-header theme-default"
    >
      <button
        class="theme-default navigation-icon-button-atom"
      >
         
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-menu"
            y="0"
          />
        </svg>
      </button>
       
      <div
        class="v-nav-divider theme-default"
      />
       
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        Item one
      </a>
       
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        Item two
      </a>
       
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        Item three
      </a>
       
      <section
        class="v-nav-sub-menu theme-default"
      >
        <a
          class="theme-default navigation-control-atom"
          role="button"
        >
          
    Sub-menu
    
          <i
            class="v-nav-sub-menu-icon"
          >
            <svg
              class="svg-atom theme-default"
              height="100%"
              width="100%"
            >
              <use
                x="0"
                xlink:href="#endpass-ui-icon-chevron-down"
                y="0"
              />
            </svg>
          </i>
        </a>
         
        <section
          class="v-nav-sub-menu-content"
        >
          <a
            class="theme-default navigation-control-atom"
            role="button"
          >
            Item four
          </a>
           
          <a
            class="theme-default navigation-control-atom"
            role="button"
          >
            Item five
          </a>
           
          <a
            class="theme-default navigation-control-atom"
            role="button"
          >
            Item six
          </a>
        </section>
      </section>
    </header>
     
    <div
      style="position: relative;"
    >
      <p
        style="margin-top: 0px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
       
      <p>
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
      </p>
       
      <p>
        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
      </p>
       
      <div>
        <div
          class="theme-default v-nav-sidebar"
        >
          <div
            class="v-sidebar theme-default is-closed"
          >
            <div
              class="v-sidebar-container theme-default is-left"
            >
              <aside
                class="v-sidebar-aside"
              >
                <!---->
                 
                <section
                  class="theme-default v-nav-sidebar-sub-menu"
                >
                  <a
                    class="theme-default navigation-sidebar-control-atom"
                    role="button"
                  >
                    <!---->
                    
    Submenu
    
                    <i
                      class="v-nav-sidebar-sub-menu-icon chevron"
                    >
                      <svg
                        class="svg-atom theme-default"
                        height="100%"
                        width="100%"
                      >
                        <use
                          x="0"
                          xlink:href="#endpass-ui-icon-chevron-down"
                          y="0"
                        />
                      </svg>
                    </i>
                  </a>
                   
                  <section
                    class="v-nav-sidebar-sub-menu-content"
                  >
                    <a
                      class="theme-default navigation-sidebar-control-atom"
                      role="button"
                    >
                      
                    Link one
                  
                    </a>
                     
                    <a
                      class="theme-default navigation-sidebar-control-atom is-disabled"
                      role="button"
                    >
                      
                    Link two
                  
                    </a>
                     
                    <a
                      class="theme-default navigation-sidebar-control-atom is-active"
                      role="button"
                    >
                      
                    Link three
                  
                    </a>
                  </section>
                </section>
                 
                <section
                  class="theme-default v-nav-sidebar-sub-menu is-iconed"
                >
                  <a
                    class="theme-default navigation-sidebar-control-atom"
                    role="button"
                  >
                    <i
                      class="v-nav-sidebar-sub-menu-icon additional"
                    >
                       
                      <svg
                        class="svg-atom theme-default"
                        height="100%"
                        width="100%"
                      >
                        <use
                          x="0"
                          xlink:href="#endpass-ui-icon-check"
                          y="0"
                        />
                      </svg>
                    </i>
                    
    Submenu with icon
    
                    <i
                      class="v-nav-sidebar-sub-menu-icon chevron"
                    >
                      <svg
                        class="svg-atom theme-default"
                        height="100%"
                        width="100%"
                      >
                        <use
                          x="0"
                          xlink:href="#endpass-ui-icon-chevron-down"
                          y="0"
                        />
                      </svg>
                    </i>
                  </a>
                   
                  <section
                    class="v-nav-sidebar-sub-menu-content"
                  >
                    <a
                      class="theme-default navigation-sidebar-control-atom"
                      role="button"
                    >
                      
                    Link one
                  
                    </a>
                     
                    <a
                      class="theme-default navigation-sidebar-control-atom is-disabled"
                      role="button"
                    >
                      
                    Link two
                  
                    </a>
                     
                    <a
                      class="theme-default navigation-sidebar-control-atom is-active"
                      role="button"
                    >
                      
                    Link three
                  
                    </a>
                  </section>
                </section>
                 
                <a
                  class="theme-default navigation-sidebar-control-atom"
                  role="button"
                >
                  
                  Single link one
                
                </a>
                 
                <a
                  class="theme-default navigation-sidebar-control-atom"
                  role="button"
                >
                  
                  Single link two
                
                </a>
                 
                <div
                  style="padding: 0px 16px;"
                >
                  <div
                    class="v-divider theme-default"
                  >
                    <hr
                      class="v-divider-before"
                    />
                     
                    <!---->
                     
                    <hr
                      class="v-divider-after"
                    />
                  </div>
                </div>
                 
                <a
                  class="theme-default navigation-sidebar-control-atom is-active"
                  role="button"
                >
                  
                  Single link three
                
                </a>
              </aside>
            </div>
             
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VNavSidebarControl/desktop active 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-sidebar-control-atom is-active"
    href="#"
  >
    
          Active link
        
  </a>
</div>
`;

exports[`Storyshots VNavSidebarControl/desktop as button 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-sidebar-control-atom"
    role="button"
  >
    
          Button
        
  </a>
</div>
`;

exports[`Storyshots VNavSidebarControl/desktop as disabled button 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-sidebar-control-atom is-disabled"
    role="button"
  >
    
          Disabled button
        
  </a>
</div>
`;

exports[`Storyshots VNavSidebarControl/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-sidebar-control-atom"
    href="#"
  >
    
          Link
        
  </a>
</div>
`;

exports[`Storyshots VNavSidebarControl/desktop disabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <a
    class="theme-default navigation-sidebar-control-atom is-disabled"
    href="#"
  >
    
          Disabled link
        
  </a>
</div>
`;

exports[`Storyshots VNavSidebarSubMenu/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <section
    class="theme-default v-nav-sidebar-sub-menu"
  >
    <a
      class="theme-default navigation-sidebar-control-atom"
      role="button"
    >
      <!---->
      
    Submenu
    
      <i
        class="v-nav-sidebar-sub-menu-icon chevron"
      >
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-chevron-down"
            y="0"
          />
        </svg>
      </i>
    </a>
     
    <section
      class="v-nav-sidebar-sub-menu-content"
    >
      <a
        class="theme-default navigation-sidebar-control-atom"
        role="button"
      >
        
            Link one
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-disabled"
        role="button"
      >
        
            Link two
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-active"
        role="button"
      >
        
            Link three
          
      </a>
    </section>
  </section>
</div>
`;

exports[`Storyshots VNavSidebarSubMenu/desktop disabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <section
    class="theme-default v-nav-sidebar-sub-menu"
  >
    <a
      class="theme-default navigation-sidebar-control-atom is-disabled"
      role="button"
    >
      <!---->
      
    Submenu
    
      <i
        class="v-nav-sidebar-sub-menu-icon chevron"
      >
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-chevron-down"
            y="0"
          />
        </svg>
      </i>
    </a>
     
    <section
      class="v-nav-sidebar-sub-menu-content"
    >
      <a
        class="theme-default navigation-sidebar-control-atom"
        role="button"
      >
        
            Link one
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-disabled"
        role="button"
      >
        
            Link two
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-active"
        role="button"
      >
        
            Link three
          
      </a>
    </section>
  </section>
</div>
`;

exports[`Storyshots VNavSidebarSubMenu/desktop with icon as prop 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <section
    class="theme-default v-nav-sidebar-sub-menu is-iconed"
  >
    <a
      class="theme-default navigation-sidebar-control-atom"
      role="button"
    >
      <i
        class="v-nav-sidebar-sub-menu-icon additional"
      >
         
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-check"
            y="0"
          />
        </svg>
      </i>
      
    Submenu
    
      <i
        class="v-nav-sidebar-sub-menu-icon chevron"
      >
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-chevron-down"
            y="0"
          />
        </svg>
      </i>
    </a>
     
    <section
      class="v-nav-sidebar-sub-menu-content"
    >
      <a
        class="theme-default navigation-sidebar-control-atom"
        role="button"
      >
        
            Link one
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-disabled"
        role="button"
      >
        
            Link two
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-active"
        role="button"
      >
        
            Link three
          
      </a>
    </section>
  </section>
</div>
`;

exports[`Storyshots VNavSidebarSubMenu/desktop with icon as slot 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <section
    class="theme-default v-nav-sidebar-sub-menu is-iconed"
  >
    <a
      class="theme-default navigation-sidebar-control-atom"
      role="button"
    >
      <i
        class="v-nav-sidebar-sub-menu-icon additional"
      >
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-check"
            y="0"
          />
        </svg>
         
        <!---->
      </i>
      
    Submenu
    
      <i
        class="v-nav-sidebar-sub-menu-icon chevron"
      >
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-chevron-down"
            y="0"
          />
        </svg>
      </i>
    </a>
     
    <section
      class="v-nav-sidebar-sub-menu-content"
    >
       
      <a
        class="theme-default navigation-sidebar-control-atom"
        role="button"
      >
        
            Link one
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-disabled"
        role="button"
      >
        
            Link two
          
      </a>
       
      <a
        class="theme-default navigation-sidebar-control-atom is-active"
        role="button"
      >
        
            Link three
          
      </a>
    </section>
  </section>
</div>
`;

exports[`Storyshots VNavSubMenu/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <section
    class="v-nav-sub-menu theme-default"
  >
    <a
      class="theme-default navigation-control-atom"
      role="button"
    >
      
    Submenu
    
      <i
        class="v-nav-sub-menu-icon"
      >
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-chevron-down"
            y="0"
          />
        </svg>
      </i>
    </a>
     
    <section
      class="v-nav-sub-menu-content"
    >
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        Item one
      </a>
       
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        Item two
      </a>
       
      <a
        class="theme-default navigation-control-atom"
        role="button"
      >
        Item three
      </a>
    </section>
  </section>
</div>
`;

exports[`Storyshots VSelect/desktop disabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom v-select theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      disabled="disabled"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      disabled="disabled"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="select-atom theme-default"
    >
      <select
        class="select-atom-control"
        disabled="disabled"
        placeholder="Placeholder text"
      >
        <option
          value="value"
        >
          
      text option 1
    
        </option>
        <option
          value="next value"
        >
          
      next option
    
        </option>
      </select>
       
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots VSelect/desktop enabled 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom v-select theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="select-atom theme-default"
    >
      <select
        class="select-atom-control"
        placeholder="Placeholder text"
      >
        <option
          value="value"
        >
          
      text option 1
    
        </option>
        <option
          value="next value"
        >
          
      next option
    
        </option>
      </select>
       
    </span>
     
    <!---->
  </div>
   
  <p>
    model: value
  </p>
   
  <p>
    options: [
  {
    "val": "value",
    "text": "text option 1"
  },
  {
    "val": "next value",
    "text": "next option"
  }
]
  </p>
</div>
`;

exports[`Storyshots VSelect/desktop error 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom v-select theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="select-atom theme-default is-error"
    >
      <select
        class="select-atom-control"
        is-error="true"
        placeholder="Placeholder text"
      >
        <option
          value="value"
        >
          
      text option 1
    
        </option>
        <option
          value="next value"
        >
          
      next option
    
        </option>
      </select>
       
      <i
        class="icon-atom theme-default is-error"
        is-error="true"
      >
        
      !
    
      </i>
    </span>
     
    <div
      class="error-atom theme-default"
    >
      
  Error message here

    </div>
  </div>
</div>
`;

exports[`Storyshots VSelect/desktop flat array 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    class="field-atom v-select theme-default"
    style="width: 288px;"
  >
    <label
      class="label-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Label

    </label>
     
    <div
      class="description-atom theme-default"
      placeholder="Placeholder text"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="select-atom theme-default"
    >
      <select
        class="select-atom-control"
        placeholder="Placeholder text"
      >
        <option
          value="option 1"
        >
          
      option 1
    
        </option>
        <option
          value="option 2"
        >
          
      option 2
    
        </option>
      </select>
       
    </span>
     
    <!---->
  </div>
   
  <p>
    model: option 1
  </p>
   
  <p>
    options: [
  "option 1",
  "option 2"
]
  </p>
</div>
`;

exports[`Storyshots VSidebar/desktop left 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    style="position: relative; height: 100vh;"
  >
    <header
      class="v-header theme-default"
    >
      <button
        class="theme-default navigation-icon-button-atom"
      >
         
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-menu"
            y="0"
          />
        </svg>
      </button>
    </header>
     
    <div
      style="position: relative;"
    >
      <p
        style="margin-top: 0px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
       
      <p>
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
      </p>
       
      <p>
        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
      </p>
       
      <div
        class="v-sidebar theme-default is-closed"
      >
        <div
          class="v-sidebar-container theme-default is-left"
        >
          <aside
            class="v-sidebar-aside"
          >
            <div
              class="v-sidebar-header theme-default"
            >
              <div
                class="v-sidebar-header-content"
              >
                <h3>
                  <span>
                    Title
                  </span>
                </h3>
                 
                <div
                  class="v-sidebar-header-subtitle"
                >
                  
                Subtitle
              
                </div>
              </div>
               
              <button
                class="v-sidebar-close"
              >
                <svg
                  class="svg-atom theme-default"
                  height="100%"
                  width="100%"
                >
                  <use
                    x="0"
                    xlink:href="#endpass-ui-icon-close"
                    y="0"
                  />
                </svg>
              </button>
            </div>
             
            <div
              class="v-divider theme-default"
            >
              <hr
                class="v-divider-before"
              />
               
              <!---->
               
              <hr
                class="v-divider-after"
              />
            </div>
             
            <div
              class="v-sidebar-panel theme-default"
            >
              
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
              
            </div>
          </aside>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VSidebar/desktop right 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <div
    style="position: relative; height: 100vh;"
  >
    <header
      class="v-header theme-default"
    >
      <button
        class="theme-default navigation-icon-button-atom"
      >
         
        <svg
          class="svg-atom theme-default"
          height="100%"
          width="100%"
        >
          <use
            x="0"
            xlink:href="#endpass-ui-icon-menu"
            y="0"
          />
        </svg>
      </button>
    </header>
     
    <div
      style="position: relative;"
    >
      <p
        style="margin-top: 0px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
       
      <p>
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
      </p>
       
      <p>
        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
      </p>
       
      <div
        class="v-sidebar theme-default is-closed"
      >
        <div
          class="v-sidebar-container theme-default is-right"
        >
          <aside
            class="v-sidebar-aside"
          >
            <div
              class="v-sidebar-header theme-default"
            >
              <div
                class="v-sidebar-header-content"
              >
                <h3>
                  <span>
                    Title
                  </span>
                </h3>
                 
                <div
                  class="v-sidebar-header-subtitle"
                >
                  
                Subtitle
              
                </div>
              </div>
               
              <button
                class="v-sidebar-close"
              >
                <svg
                  class="svg-atom theme-default"
                  height="100%"
                  width="100%"
                >
                  <use
                    x="0"
                    xlink:href="#endpass-ui-icon-close"
                    y="0"
                  />
                </svg>
              </button>
            </div>
             
            <div
              class="v-divider theme-default"
            >
              <hr
                class="v-divider-before"
              />
               
              <!---->
               
              <hr
                class="v-divider-after"
              />
            </div>
             
            <div
              class="v-sidebar-panel theme-default"
            >
              
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
              
            </div>
          </aside>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VSvgIcon/desktop default 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    class="storybook-table icons"
  >
    <tr>
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-arrow-left"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          arrow-left
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-check"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          check
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-chevron-down"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          chevron-down
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-chevron-up"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          chevron-up
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-close"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          close
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-eye"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          eye
        </span>
      </td>
    </tr>
     
    <tr>
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-menu"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          menu
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-action"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          action
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-google"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          google
        </span>
      </td>
       
      <td>
        <div>
          <svg
            class="svg-atom theme-default"
            height="100%"
            width="100%"
          >
            <use
              x="0"
              xlink:href="#endpass-ui-icon-github"
              y="0"
            />
          </svg>
        </div>
         
        <span>
          github
        </span>
      </td>
       
      <td />
       
      <td />
    </tr>
  </table>
</div>
`;

exports[`Storyshots VTable/desktop basic 1`] = `
<div>
  <div
    style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px);"
  >
    [object Object]
  </div>
   
  <table
    class="theme-default v-table"
  >
    <thead
      class="theme-default v-table-head"
    >
      <tr
        class="theme-default v-table-row"
      >
        <th
          class="theme-default v-table-head-cell"
        >
          Column header
        </th>
         
        <th
          class="theme-default v-table-head-cell"
        >
          Column header
        </th>
         
        <th
          class="theme-default v-table-head-cell"
        >
          Column header
        </th>
         
        <th
          class="theme-default v-table-head-cell"
        >
          Column header
        </th>
         
        <th
          class="theme-default v-table-head-cell"
        >
          Column header
        </th>
         
        <th
          class="theme-default v-table-head-cell"
        >
          Column header
        </th>
      </tr>
    </thead>
     
    <tbody
      class="theme-default v-table-body"
    >
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
      <tr
        class="theme-default v-table-row"
      >
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
         
        <td
          class="theme-default v-table-cell"
        >
          cell text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
